Fix snapshot rename input not visible in FF96

--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -1349,6 +1349,9 @@ svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1001
 #pedal-presets-list {
     background-color: inherit;
 }
+#pedal-presets-list-input {
+    z-index: 1;
+}
 #pedal-presets-list-input::selection {
     background: #883996 !important;
     color: white !important;
